manifests/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-socks-proxy
  namespace: edge-newpark
spec:
  selector:
    app: wireguard-socks-proxy
  ports:
  - protocol: TCP
    port: 1080
    targetPort: socks
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-socks-proxy-nodeport
  namespace: edge-newpark
spec:
  type: NodePort
  selector:
    app: wireguard-socks-proxy
  ports:
  - name: socks
    protocol: TCP
    port: 1080
    targetPort: socks
    nodePort: 31080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
  namespace: edge-newpark
spec:
  selector:
    app: wireguard-socks-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
